...
        switch self {
        case .reminder:
            "Reminder"
        case .action:
            "Action"
        case .post:
            "Post"
        case .calendar:
            "Calendar"
        }
    }

    var symbolName: String {
...
